[package]
name = "llws"
version = "0.1.0"
authors = ["ross <rossbennett34@gmail.com>"]
edition = "2018"
description = "A low level web socket reader and writer library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
http = "0.2"
httparse = "1.3.4"
base64 = "0.12.0"
rand = "0.7.2"
sha-1 = "0.9"
digest = "0.9.0"
